--- a/.github/workflows/tests-applitools.yml
+++ b/.github/workflows/tests-applitools.yml
@@ -16,6 +16,7 @@ on:
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
   APPLITOOLS_BATCH_ID: ${{ inputs.batch-id || github.ref_name }}
+  APPLITOOLS_BRANCH_NAME: "lumada-design/hv-uikit-react/master"
 
 jobs:
   run-tests:
@@ -28,6 +29,15 @@ jobs:
 
       - name: Install Dependencies
         uses: ./.github/actions/install-dependencies
+
+      - name: Set Applitools App Name
+        id: set-app-name
+        run: |
+          if [[ "${{ github.ref_name }}" == "next"* ]]; then
+            echo "APPLITOOLS_APP_NAME=NEXT UI Kit" >> $GITHUB_ENV
+          else
+          echo "APPLITOOLS_APP_NAME=UI Kit" >> $GITHUB_ENV
+          fi
 
       - name: Eyes Storybook
         run: |
