--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -44,6 +44,8 @@
     "@emotion/cache": "^11.10.5",
     "@hitachivantara/uikit-react-core": "^5.7.4",
     "clsx": "^1.2.1",
+    "embla-carousel-react": "^8.0.0-rc03",
+    "react-color": "^2.19.3",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
