--- a/examples/uikit-vite-ts/package.json
+++ b/examples/uikit-vite-ts/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@hitachivantara/uikit-react-core": "^5.3.0",
-    "@hitachivantara/uikit-react-icons": "^5.1.2",
+    "@hitachivantara/uikit-react-core": "latest",
+    "@hitachivantara/uikit-react-icons": "latest",
     "@mui/material": "^5.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
