--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:doc": "build-storybook --docs -o dist --quiet",
     "test": "npm run test -w packages --if-present",
     "test:pa11y": "pa11y-ci -c .config/pa11yci.config.js",
+    "coverage": "npm run coverage -w packages --if-present",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
@@ -51,6 +52,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
+    "@vitest/coverage-c8": "^0.31.1",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -77,7 +79,7 @@
     "vite": "^4.1.4",
     "vite-plugin-dts": "2.0.2",
     "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^0.29.2",
+    "vitest": "^0.31.1",
     "yup": "^1.0.2"
   },
   "husky": {
