--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,10 @@
     "@hitachivantara/uikit-react-icons": "^5.1.11",
     "@hitachivantara/uikit-react-shared": "^5.0.15",
     "@hitachivantara/uikit-styles": "^5.8.1",
+    "@internationalized/date": "^3.2.0",
     "@popperjs/core": "^2.11.6",
+    "@react-aria/datepicker": "^3.4.1",
+    "@react-stately/datepicker": "^3.4.1",
     "@types/react-table": "^7.7.14",
     "attr-accept": "^2.2.2",
     "clsx": "^1.2.1",
