--- a/app/package.json
+++ b/app/package.json
@@ -7,32 +7,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/css": "^11.10.6",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@hitachivantara/uikit-react-core": "^5.0.0",
-    "@hitachivantara/uikit-react-icons": "^5.0.0",
-    "@hitachivantara/uikit-styles": "^5.0.0",
-    "@hitachivantara/uikit-react-code-editor": "^5.0.0",
-    "formik": "^2.2.9",
-    "i18next": "^22.4.10",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.1.1",
-    "js-cookie": "^3.0.1",
+    "@emotion/css": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hitachivantara/uikit-react-code-editor": "^5.2.18",
+    "@hitachivantara/uikit-react-core": "^5.14.1",
+    "@hitachivantara/uikit-react-icons": "^5.1.11",
+    "@hitachivantara/uikit-styles": "^5.8.1",
+    "@mui/material": "^5.13.5",
+    "clsx": "^1.2.1",
+    "formik": "^2.4.2",
+    "i18next": "^22.5.1",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
-    "react-i18next": "^12.2.0",
-    "react-router-dom": "^6.8.2",
-    "yup": "^1.0.2"
+    "react-i18next": "^12.3.1",
+    "react-router-dom": "^6.13.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.6",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@types/lodash": "^4.14.195",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
