--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "prepare": "npx husky install .config/husky"
   },
   "devDependencies": {
-    "@applitools/eyes-storybook": "^3.31.1",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@applitools/eyes-storybook": "^3.35.0",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@emotion/core": "^11.0.0",
-    "@emotion/css": "^11.10.6",
+    "@emotion/css": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mdx-js/react": "^1.6.22",
-    "@mui/material": "^5.12.2",
-    "@playwright/test": "^1.31.2",
+    "@mui/material": "^5.13.5",
+    "@playwright/test": "^1.35.0",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
@@ -48,42 +49,44 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "@vitest/coverage-c8": "^0.31.1",
     "arquero": "^5.2.0",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
-    "eslint": "^8.35.0",
+    "@types/lodash": "^4.14.195",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "@vitest/coverage-c8": "^0.32.0",
+    "clsx": "^1.2.1",
+    "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "formik": "^2.2.9",
-    "html-react-parser": "^3.0.15",
-    "jsdom": "^21.1.0",
-    "lerna": "^6.5.1",
-    "lint-staged": "^13.1.2",
+    "formik": "^2.4.2",
+    "html-react-parser": "^3.0.16",
+    "jsdom": "^21.1.2",
+    "lerna": "^6.6.2",
+    "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
     "pa11y-ci": "^3.0.1",
     "pa11y-ci-reporter-html": "^5.1.1",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vite-plugin-dts": "2.0.2",
-    "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^0.31.1",
-    "yup": "^1.0.2"
+    "vite": "^4.3.9",
+    "vite-plugin-dts": "2.3.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.32.0",
+    "yup": "^1.2.0"
   },
   "husky": {
     "hooks": {
