--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -32,21 +32,24 @@
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.12.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.5",
+    "@emotion/css": "^11.11.0",
     "@hitachivantara/uikit-react-core": "^5.14.1",
+    "@hitachivantara/uikit-react-icons": "^5.1.11",
     "@hitachivantara/uikit-styles": "^5.8.1",
     "@monaco-editor/react": "^4.5.1",
     "clsx": "^1.2.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@storybook/react": "^6.5.16",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "npm-run-all": "^4.1.5",
-    "tsc-alias": "^1.8.2"
+    "vite": "^4.3.9"
   },
   "files": [
     "dist"
