--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,37 +41,47 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.5",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/css": "^11.11.0",
+    "@emotion/serialize": "^1.1.2",
+    "@emotion/utils": "^1.2.1",
     "@hitachivantara/uikit-react-icons": "^5.1.11",
     "@hitachivantara/uikit-react-shared": "^5.0.15",
     "@hitachivantara/uikit-styles": "^5.8.1",
     "@internationalized/date": "^3.2.0",
-    "@popperjs/core": "^2.11.6",
+    "@popperjs/core": "^2.11.8",
     "@react-aria/datepicker": "^3.4.1",
     "@react-stately/datepicker": "^3.4.1",
+    "@mui/base": "^5.0.0-beta.4",
     "@types/react-table": "^7.7.14",
     "attr-accept": "^2.2.2",
     "clsx": "^1.2.1",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.8",
     "detect-browser": "^5.3.0",
-    "embla-carousel-react": "^8.0.0-rc03",
-    "hoist-non-react-statics": "^3.3.2",
+    "embla-carousel-react": "^8.0.0-rc07",
     "lodash": "^4.17.21",
     "notistack": "^2.0.8",
-    "rc-slider": "^10.1.1",
+    "rc-slider": "^10.2.1",
     "rc-tooltip": "^6.0.1",
     "react-color": "^2.19.3",
     "react-popper": "^2.3.0",
-    "react-resize-detector": "^8.0.4",
+    "react-resize-detector": "^8.1.0",
     "react-table": "^7.8.0",
-    "react-window": "^1.8.8"
+    "react-window": "^1.8.9"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-color": "^2.17.5",
-    "@types/react-dom": "^18.0.11",
+    "@playwright/test": "^1.35.0",
+    "@storybook/react": "^6.5.16",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/react": "^18.2.12",
+    "@types/react-color": "^2.17.6",
+    "@types/react-dom": "^18.2.5",
+    "html-react-parser": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "tsc-alias": "^1.8.2"
+    "react-google-charts": "^4.0.0",
+    "vite": "^4.3.9",
+    "vitest": "^0.32.0"
   },
   "files": [
     "dist"
