--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -42,18 +42,19 @@
     "@hitachivantara/uikit-styles": "^5.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "by-node-env": "^2.0.1",
     "cpy-cli": "^4.2.0",
-    "html-to-react": "^1.5.0",
+    "html-to-react": "^1.6.0",
     "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "recursive-readdir": "^2.2.3",
     "svgo": "^3.0.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "yargs": "^17.7.1"
+    "tsconfig-paths": "^4.2.0",
+    "vite": "^4.3.9",
+    "yargs": "^17.7.2"
   },
   "files": [
     "dist"
