--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -41,16 +41,23 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.5",
+    "@emotion/css": "^11.11.0",
+    "@emotion/serialize": "^1.1.2",
     "@hitachivantara/uikit-react-core": "^5.14.1",
+    "@hitachivantara/uikit-react-icons": "^5.1.11",
+    "@hitachivantara/uikit-styles": "^5.8.1",
     "clsx": "^1.2.1",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@storybook/react": "^6.5.16",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "npm-run-all": "^4.1.5",
-    "tsc-alias": "^1.8.2"
+    "vite": "^4.3.9",
+    "vitest": "^0.32.0"
   },
   "files": [
     "dist"
