--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -37,9 +37,10 @@
     "@hitachivantara/uikit-styles": "^5.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "npm-run-all": "^4.1.5"
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "npm-run-all": "^4.1.5",
+    "vite": "^4.3.9"
   },
   "files": [
     "dist"
