--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -20,8 +20,12 @@
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
+  "dependencies": {
+    "csstype": "^3.1.2"
+  },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "vite": "^4.3.9"
   },
   "files": [
     "dist"
