--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -40,9 +40,11 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.0",
     "@hitachivantara/uikit-react-core": "^5.14.1"
   },
   "devDependencies": {
+    "@storybook/react": "^6.5.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "npm-run-all": "^4.1.5",
