--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -8,10 +8,12 @@ on:
     types: [closed]
 
 env:
-  DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
-  DOCUMENTATION_PUBLISH_BRANCH: master
+  PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
+  PUBLISH_BRANCH: master
   DOCUMENTATION_PUBLISH_FOLDER: uikit/pr-${{ github.event.number }}
   DOCUMENTATION_PUBLISH_MESSAGE: "docs: remove PR ${{ github.event.number }} of ${{ github.repository }}"
+  APP_PUBLISH_FOLDER: uikit-app/pr-${{ github.event.number }}
+  APP_PUBLISH_MESSAGE: "chore: remove PR ${{ github.event.number }} of ${{ github.repository }}"
 
 jobs:
   cleanup-deployment:
@@ -22,8 +24,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          repository: ${{ env.DOCUMENTATION_PUBLISH_REPO }}
-          ref: ${{ env.DOCUMENTATION_PUBLISH_BRANCH }}
+          repository: ${{ env.PUBLISH_REPO }}
+          ref: ${{ env.PUBLISH_BRANCH }}
           token: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
           path: gh-docs
           fetch-depth: 1
@@ -35,12 +37,22 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git rm -r ${DOCUMENTATION_PUBLISH_FOLDER}
           git commit -m "${DOCUMENTATION_PUBLISH_MESSAGE}"
+          git rm -r ${APP_PUBLISH_FOLDER}
+          git commit -m "${APP_PUBLISH_MESSAGE}"
           git push
 
-      - name: Prune Deployment
+      - name: Prune Deployment for Documentation
         uses: bobheadxi/deployments@v1
         with:
           step: deactivate-env
           token: ${{ secrets.GITHUB_TOKEN }}
           env: ${{env.DOCUMENTATION_PUBLISH_FOLDER}}
-          desc: Deployment was pruned
+          desc: Deployment for documentation was pruned
+
+      - name: Prune Deployment for App
+        uses: bobheadxi/deployments@v1
+        with:
+          step: deactivate-env
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: ${{env.APP_PUBLISH_FOLDER}}
+          desc: Deployment for app was pruned
