chore: fix deployment being used more than once in same scope
chore: fix deployment being used more than once in same scope

--- a/.github/actions/build-artifacts/action.yml
+++ b/.github/actions/build-artifacts/action.yml
@@ -29,7 +29,7 @@ runs:
 
     - name: Build App
       if: ${{ inputs.build-app == 'true' }}
-      run: npx vite build app  
+      run: npx vite build app --base=${{ env.APP_BASE_PATH }}
       shell: bash
 
     - name: Archive App
