--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -11,9 +11,8 @@ env:
   PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
   PUBLISH_BRANCH: master
   DOCUMENTATION_PUBLISH_FOLDER: uikit/pr-${{ github.event.number }}
-  DOCUMENTATION_PUBLISH_MESSAGE: "docs: remove PR ${{ github.event.number }} of ${{ github.repository }}"
   APP_PUBLISH_FOLDER: uikit-app/pr-${{ github.event.number }}
-  APP_PUBLISH_MESSAGE: "chore: remove PR ${{ github.event.number }} of ${{ github.repository }}"
+  PUBLISH_MESSAGE: "chore: remove PR ${{ github.event.number }} of ${{ github.repository }}"
 
 jobs:
   cleanup-deployment:
@@ -35,10 +34,9 @@ jobs:
           cd ${{ github.workspace }}/gh-docs
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git rm -r ${DOCUMENTATION_PUBLISH_FOLDER}
-          git commit -m "${DOCUMENTATION_PUBLISH_MESSAGE}"
           git rm -r ${APP_PUBLISH_FOLDER}
-          git commit -m "${APP_PUBLISH_MESSAGE}"
+          git rm -r ${DOCUMENTATION_PUBLISH_FOLDER}
+          git commit -m "${PUBLISH_MESSAGE}"
           git push
 
       - name: Prune Deployment for Documentation
