chore: update lerna to allow v3.x releases

--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
       "npmClient": "npm"
     },
     "version": {
-      "allowBranch": ["master", "feat/*", "bug/*"],
+      "allowBranch": ["master", "feat/*", "bug/*", "v3.x"],
       "message": "chore(release): publish",
       "conventionalCommits": true,
       "createRelease": "github"
