--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
   notify-release:
     name: Notify release
     runs-on: ubuntu-latest
-    needs: [publish-doc]
+    needs: [publish-artifacts]
 
     env:
       DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/${{ github.ref_name }}/
