feat(LineChart): fix tooltip

--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitest/coverage-c8": "^0.31.1",
+    "arquero": "^5.2.0",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
