--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -33,21 +33,22 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.12.2",
+    "arquero": "^5.2.0",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.5",
-    "@hitachivantara/uikit-react-core": "^5.5.0",
-    "arquero": "^5.2.0",
-    "echarts": "^5.4.2",
-    "echarts-for-react": "^3.0.2"
+    "@emotion/css": "^11.11.0",
+    "@emotion/serialize": "^1.1.2",
+    "@hitachivantara/uikit-react-core": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "npm-run-all": "^4.1.5",
-    "tsc-alias": "^1.8.2"
+    "vite": "^4.3.9"
   },
   "files": [
     "dist"
