--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -68,7 +68,7 @@ jobs:
   release:
     name: Release
     if: github.event_name == 'schedule' && !contains(github.event.head_commit.message, '${ RELEASE_COMMIT_MESSAGE }')
-    needs: [static-checks, applitools, security-scans]
+    needs: [static-checks, applitools]
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Release
