chore: improve typings across components (remove any's)

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "src",
     "rootDir": "src",
     "outDir": "dist",
+    // "noImplicitAny": true,
     "paths": {
       "@core/*": ["./*"]
     }
