--- a/package.json
+++ b/package.json
@@ -49,16 +49,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "arquero": "^5.2.0",
-    "echarts": "^5.4.2",
-    "echarts-for-react": "^3.0.2",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "@vitest/coverage-c8": "^0.32.0",
+    "arquero": "^5.2.0",
     "clsx": "^1.2.1",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -81,6 +81,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "storybook-dark-mode": "^2.1.1",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
     "vite-plugin-dts": "2.3.0",
