docs: upgrade to storybook 7

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "npm run dev -w app",
-    "doc": "start-storybook -p 6006 --no-manager-cache",
+    "doc": "storybook dev -p 6006",
     "build": "npm run build -w packages",
-    "build:doc": "build-storybook --docs -o dist --quiet",
+    "build:doc": "storybook build --docs -o dist --quiet",
     "test": "npm run test -w packages --if-present",
     "test:pa11y": "pa11y-ci -c .config/pa11yci.config.js",
     "coverage": "npm run coverage -w packages --if-present",
@@ -41,12 +41,13 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.13.5",
     "@playwright/test": "^1.35.0",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.1.29",
-    "@storybook/core-common": "^6.5.16",
-    "@storybook/react": "^6.5.16",
+    "@storybook/addon-a11y": "^7.0.23",
+    "@storybook/addon-essentials": "^7.0.23",
+    "@storybook/addon-links": "^7.0.23",
+    "@storybook/addon-mdx-gfm": "^7.0.23",
+    "@storybook/core-common": "^7.0.23",
+    "@storybook/react": "^7.0.23",
+    "@storybook/react-vite": "^7.0.23",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -82,6 +83,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "storybook": "^7.0.23",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
     "vite-plugin-dts": "2.3.0",
