--- a/.github/actions/build-artifacts/action.yml
+++ b/.github/actions/build-artifacts/action.yml
@@ -18,7 +18,7 @@ runs:
       uses: ./.github/actions/install-dependencies
 
     - name: Build Documentation
-      run: npx cross-env NODE_OPTIONS=--max_old_space_size=8192 build-storybook --docs -o dist --quiet
+      run: npm run build:doc
       shell: bash
 
     - name: Archive Documentation
