--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint:fix": "npm run lint -- --fix",
     "lint-staged": "lint-staged",
     "typecheck": "npm run typecheck -w packages --if-present",
+    "depcheck": "npx -y owasp-dependency-check --project uikit -o reports --cveStartYear 2015",
     "publish:release": "lerna publish --conventional-graduate --yes",
     "publish:next": "lerna publish --conventional-prerelease --yes --preid next --dist-tag next",
     "prepare": "npx husky install .config/husky"
@@ -49,16 +50,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "arquero": "^5.2.0",
-    "echarts": "^5.4.2",
-    "echarts-for-react": "^3.0.2",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "@vitest/coverage-c8": "^0.32.0",
+    "arquero": "^5.2.0",
     "clsx": "^1.2.1",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
