--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -14,8 +14,7 @@
   "main": "src/index.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "run-s clean build:*",
-    "build:js": "vite build",
+    "build": "vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build && npx clean-publish"
