--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -23,8 +23,7 @@
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
-    "build": "run-s clean build:*",
-    "build:js": "vite build",
+    "build": "vite build",
     "test": "vitest run",
     "test:update": "vitest -u",
     "test:ui": "vitest --ui",
