--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "doc": "start-storybook -p 6006 --no-manager-cache",
     "build": "npm run build -w packages",
     "build:doc": "build-storybook --docs -o dist --quiet",
+    "build:app": "vite build app",
     "test": "npm run test -w packages --if-present",
     "test:pa11y": "pa11y-ci -c .config/pa11yci.config.js",
+    "test:eyes": "npx eyes-storybook -f .config/applitools.config.js",
     "coverage": "npm run coverage -w packages --if-present",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
