--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build-artifacts:
-    name: Build Documentation and App
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -25,10 +25,10 @@ jobs:
       - name: Build Artifacts
         uses: ./.github/actions/build-artifacts
         env:
-          APP_BASE_PATH: uikit-app/${{ env.PUBLISH_FOLDER }}/
+          APP_BASE_PATH: /uikit-app/${{ env.PUBLISH_FOLDER }}/
 
   deploy-artifacts:
-    name: Deploy Documentation and App
+    name: Deploy
     runs-on: ubuntu-latest
     needs: build-artifacts
     strategy:
