--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -29,7 +29,7 @@ jobs:
           path: gh-docs
           fetch-depth: 1
 
-      - name: Commit removal
+      - name: Remove folder
         run: |
           cd ${{ github.workspace }}/gh-docs
           git config --global user.name 'github-actions[bot]'
